hphp/test/slow/magic-methods/callStatic.php.expectf
Fatal error: Magic `__callStatic` methods are no longer supported in %s/callStatic.php on line 4
